--- a/integration-libs/opf/checkout/assets/translations/en/opfCheckout.json
+++ b/integration-libs/opf/checkout/assets/translations/en/opfCheckout.json
@@ -12,7 +12,7 @@
     "closeTermsAndConditionsAlert": "Close alert",
     "itemsToBeShipped": "Items to be shipped",
     "proceedPayment": "Place Order",
-    "paymentInfoMessage": "You are about to make a payment. Depending on the option selected, you will either be redirected to a secure external page or complete the process directly within this page",
+    "defaultPaymentInfoMessage": "You are about to make a payment. Depending on the option selected, you will either be redirected to a secure external page or complete the process directly within this page",
     "proceedPaymentButtonLabel": "Place Order, opens external page",
     "retryPayment": "Retry to Continue",
     "checkTermsAndConditionsExplicit": "You must agree Terms & Conditions to see available payment options.",
