--- a/feature-libs/user/account/assets/translations/en/userAccount.json
+++ b/feature-libs/user/account/assets/translations/en/userAccount.json
@@ -26,6 +26,7 @@
     },
     "noReceiveCode": "Didn't receive the code?",
     "verify": "Verify",
+    "registerVerify": "Register",
     "back": "Back",
     "tokenInputHint": "You can request a new code. A timer starts indicating the seconds left until you can resend your request."
   },
