CXSPA-8772:fix lable to remove optional

--- a/feature-libs/organization/user-registration/assets/translations/en/userRegistration.json
+++ b/feature-libs/organization/user-registration/assets/translations/en/userRegistration.json
@@ -54,7 +54,7 @@
         "placeholder": "Zip/Postal code"
       },
       "postalCodeOnOTPForm": {
-        "label": "Zip/Postal code (optional)",
+        "label": "Zip/Postal code",
         "placeholder": "Zip/Postal code"
       },
       "addressLine": {
